--- a/ApkAnalyzer/pom.xml
+++ b/ApkAnalyzer/pom.xml
@@ -6,14 +6,13 @@
   <properties>
      <maven.compiler.source>23</maven.compiler.source>
      <maven.compiler.target>23</maven.compiler.target>
-   </properties>
+    <jackson.version>2.18.2</jackson.version>
+  </properties>
   <dependencies>
-
     <dependency>
       <groupId>com.fasterxml.jackson.core</groupId>
       <artifactId>jackson-databind</artifactId>
-      <version>2.18.1</version>
+      <version>${jackson.version}</version>
     </dependency>
-
   </dependencies>
 </project>
